# bs-backup

./: pyproject.toml  shell.nix
src/: backup.py  main.py  prepare.py  tests.py
