[tool.poetry]
name = "bs-backup"
version = "0.1.0"
description = "A bloody stupid backup tool"
authors = ["Cynosure-Null <cynosure@disroot.org>"]
license = "GNU GPL V3"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
